--- a/conflict_based_search/package.xml
+++ b/conflict_based_search/package.xml
@@ -39,6 +39,8 @@
   <build_depend>quad_utils</build_depend>
   <build_depend>grid_map_core</build_depend>
   <build_depend>grid_map_ros</build_depend>
+  <build_depend>message_generation</build_depend>
+  <build_depend>global_body_planner</build_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
   <build_export_depend>eigen</build_export_depend>
@@ -46,6 +48,8 @@
   <build_export_depend>quad_utils</build_export_depend>
   <build_export_depend>grid_map_core</build_export_depend>
   <build_export_depend>grid_map_ros</build_export_depend>
+  <build_export_depend>message_generation</build_export_depend>
+  <build_export_depend>global_body_planner</build_export_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>eigen</exec_depend>
@@ -53,6 +57,8 @@
   <exec_depend>quad_utils</exec_depend>
   <exec_depend>grid_map_core</exec_depend>
   <exec_depend>grid_map_ros</exec_depend>
+  <exec_depend>message_runtime</exec_depend>
+  <exec_depend>global_body_planner</exec_depend>
   <depend>eigen_conversions</depend>
   <depend>tf</depend>
   <depend>tf2</depend>
