--- a/global_body_planner/global_body_planner.yaml
+++ b/global_body_planner/global_body_planner.yaml
@@ -5,7 +5,7 @@ global_body_planner:
   goal_state: [5.0, 0.0]                  # Nominal goal state (x/y coordinates)
   pos_error_threshold: 25                 # Error from planned state to trigger reset
   startup_delay: 2.0                      # Time to delay after starting node before planning
-  replanning: true                        # Boolean to determine if replanning is allowed
+  replanning: false                       # Boolean to determine if replanning is allowed
   dt: 0.03                                # Resolution of kinematic feasibility checks, m
   trapped_buffer_factor: 7                # Number of feasibility that must pass to not consider a state trapped
   backup_ratio: 0.5                       # Ratio of trajectory to back up after finding an invalid state, s
