--- a/global_body_planner/package.xml
+++ b/global_body_planner/package.xml
@@ -55,18 +55,21 @@
   <build_depend>quad_utils</build_depend>
   <build_depend>grid_map_core</build_depend>
   <build_depend>grid_map_ros</build_depend>
+  <build_depend>message_generation</build_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
   <build_export_depend>quad_msgs</build_export_depend>
   <build_export_depend>quad_utils</build_export_depend>
   <build_export_depend>grid_map_core</build_export_depend>
   <build_export_depend>grid_map_ros</build_export_depend>
+  <build_export_depend>message_generation</build_export_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>quad_msgs</exec_depend>
   <exec_depend>quad_utils</exec_depend>
   <exec_depend>grid_map_core</exec_depend>
   <exec_depend>grid_map_ros</exec_depend>
+  <exec_depend>message_runtime</exec_depend>
 
   <depend>tf</depend>
   <depend>tf2</depend>
