--- a/global_body_planner/package.xml
+++ b/global_body_planner/package.xml
@@ -70,6 +70,7 @@
   <exec_depend>grid_map_core</exec_depend>
   <exec_depend>grid_map_ros</exec_depend>
   <exec_depend>message_runtime</exec_depend>
+  <exec_depend>message_generation</exec_depend>
 
   <depend>tf</depend>
   <depend>tf2</depend>
